--- a/war/index.html
+++ b/war/index.html
@@ -46,6 +46,8 @@
     <div id="watermark" style="background: url(../profiles/{{config.profile.meta}}/img/watermark.png) no-repeat;"></div>
     <!-- end watermark for app -->
 
+    <div watermarker="{{config.profile.meta}}"></div>
+
     <!-- navbar -->
     <div class="navbar navbar-fixed-top" bs-navbar>
       <div class="navbar-inner">
