--- a/war/index.html
+++ b/war/index.html
@@ -152,7 +152,7 @@
           <!-- ask & version -->
           <span class="muted">
             <small>
-              Ask Community Systems, 2013<br><i>WebPaige v2.0.0</i>
+              Ask Community Systems, 2013<br><i>WebPaige v{{config.version}}</i>
             </small>
           </span>
           <!-- end ask & version -->
