--- a/war/index.html
+++ b/war/index.html
@@ -200,6 +200,7 @@
     <!-- init angular app -->
     <script src="js/app.js"></script>
     <!-- modules -->
+    <script src="js/modules/version.js"></script>
     <script src="js/modules/login.js"></script>
     <script src="js/modules/dashboard.js"></script>
     <script src="js/modules/planboard.js"></script>
