--- a/war/index.html
+++ b/war/index.html
@@ -152,7 +152,7 @@
           <!-- ask & version -->
           <span class="muted">
             <small>
-              Ask Community Systems, 2013<br><i>WebPaige v{{config.version}}</i>
+              Ask Community Systems, 2013<br><i>WebPaige <a href="version.html" target="_blank">v{{config.version}}</a></i>
             </small>
           </span>
           <!-- end ask & version -->
@@ -200,7 +200,6 @@
     <!-- init angular app -->
     <script src="js/app.js"></script>
     <!-- modules -->
-    <script src="js/modules/version.js"></script>
     <script src="js/modules/login.js"></script>
     <script src="js/modules/dashboard.js"></script>
     <script src="js/modules/planboard.js"></script>
