--- a/war/version.html
+++ b/war/version.html
@@ -64,6 +64,7 @@
                 <h4>2.0.1</h4>
                 <p>
                   <ul>
+                    <li>hot fix for not displaying date time conversions in message center <i class="text-info">4-4-2013</i></li>
                     <li>Case-insesitive login <i class="text-info">4-4-2013</i></li>
                     <li>Quick css fix for IE. (Not showing timeslots) <i class="text-info">3-4-2013</i></li>
                     <li>CSS fix for tabs left border. (Bug with dynamic height sizing when there is no content in tab is still open!!) <i class="text-info">3-4-2013</i></li>
