updated versions & timeline scss

--- a/war/version.html
+++ b/war/version.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>WebPaige version updates</title>
+    <title>WebPaige versions</title>
     
     <meta name="description" content="WebPaige v2.0.0">
     <meta name="viewport" content="width=device-width">
@@ -51,7 +51,7 @@
             <hr>
 
             <div class="jumbotron">
-              <h1>WebPaige Version Updates</h1>
+              <h1>WebPaige Versions</h1>
               <br>
               <a class="btn btn-large btn-success" onclick="window.close()">Close this window</a>
             </div>
@@ -64,6 +64,7 @@
                 <h4>2.0.1</h4>
                 <p>
                   <ul>
+                    <li>dynamic listing for legenda based on available states of that particular installation <i class="text-info">4-4-2013</i></li>
                     <li>hot fix for not displaying date time conversions in message center <i class="text-info">4-4-2013</i></li>
                     <li>Case-insesitive login <i class="text-info">4-4-2013</i></li>
                     <li>Quick css fix for IE. (Not showing timeslots) <i class="text-info">3-4-2013</i></li>
