--- a/war/version.html
+++ b/war/version.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>WebPaige versions</title>
+    <title>WebPaige Versions</title>
     
     <meta name="description" content="WebPaige v2.0.0">
     <meta name="viewport" content="width=device-width">
@@ -40,38 +40,30 @@
       <!-- container-fluid -->
       <div class="container-fluid">
         <section id="versions">
-
           <div class="container-narrow">
-
             <div class="masthead">
               <h4 class="pull-right"><span class="muted">Current version:</span> v2.0.1</h4>
               <h3 class="muted">Change Log</h3>
             </div>
-
             <hr>
-
             <div class="jumbotron">
               <h1>WebPaige Versions</h1>
               <br>
               <a class="btn btn-large btn-success" onclick="window.close()">Close this window</a>
             </div>
-
             <hr>
-
             <div class="row-fluid marketing">
               <div class="span12">
-
                 <h4>2.0.1</h4>
                 <p>
                   <ul>
-                    <li>dynamic listing for legenda based on available states of that particular installation <i class="text-info">4-4-2013</i></li>
-                    <li>hot fix for not displaying date time conversions in message center <i class="text-info">4-4-2013</i></li>
+                    <li>Dynamic listing for legenda based on available states of that particular installation <i class="text-info">4-4-2013</i></li>
+                    <li>Hot fix for not displaying date time conversions in message center <i class="text-info">4-4-2013</i></li>
                     <li>Case-insesitive login <i class="text-info">4-4-2013</i></li>
                     <li>Quick css fix for IE. (Not showing timeslots) <i class="text-info">3-4-2013</i></li>
                     <li>CSS fix for tabs left border. (Bug with dynamic height sizing when there is no content in tab is still open!!) <i class="text-info">3-4-2013</i></li>
                   </ul>
                 </p>
-
                 <h4>2.0.0</h4>
                 <p>
                   <ul>
@@ -81,15 +73,14 @@
                   </ul>
                 </p>
               </div>
-
           </div> <!-- /container -->
-
         </section>
       </div>
       <!-- end container-fluid -->
       <div id="push"></div>
     </div>
     <!-- end wrap -->
+
     <!-- bootstrap -->
     <script src="js/libs/bootstrap/bootstrap.js"></script>
 
