--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,7 @@
                 <h4>2.0.1</h4>
                 <p>
                   <ul>
+                    <li>Fixed rendering issues with pie chart of totals in statistics in plan <i class="text-info">5-4-2013</i></li>
                     <li>Dynamic listing for legenda based on available states of that particular installation <i class="text-info">4-4-2013</i></li>
                     <li>Hot fix for not displaying date time conversions in message center <i class="text-info">4-4-2013</i></li>
                     <li>Case-insesitive login <i class="text-info">4-4-2013</i></li>
