--- a/war/version.html
+++ b/war/version.html
@@ -54,6 +54,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.0.2</h4>
+                <p>
+                  <ul>
+                    <li>Dashboard 2.0 <i class="text-info">8-4-2013</i></li>
+                  </ul>
+                </p>
                 <h4>2.0.1</h4>
                 <p>
                   <ul>
