--- a/war/version.html
+++ b/war/version.html
@@ -54,9 +54,10 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.0.2</h4>
+                <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Default wish value setting for groups <i class="text-info">8-4-2013</i></li>
                     <li>Dashboard 2.0 <i class="text-info">8-4-2013</i></li>
                   </ul>
                 </p>
