--- a/war/version.html
+++ b/war/version.html
@@ -57,7 +57,8 @@
                 <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
-                    <li>Default wish value setting for groups <i class="text-info">8-4-2013</i></li>
+                    <li>First group to render setting functionality <i class="text-info">10-4-2013</i></li>
+                    <li>Default wish value setting for groups <i class="text-info">9-4-2013</i></li>
                     <li>Dashboard 2.0 <i class="text-info">8-4-2013</i></li>
                   </ul>
                 </p>
