successfull implementation of datetime for planboard for tablets

--- a/war/index.html
+++ b/war/index.html
@@ -51,10 +51,7 @@
         backgroundRepeat: 'no-repeat'
       });
 
-      if ($.browser.mobile)
-      {
-        $('#watermark').css({ bottom: '-10px' });
-      }
+      if ($.browser.mobile) $('#watermark').css({ bottom: '-10px' });
     </script>
     <!-- end watermark for app -->
 
