--- a/war/version.html
+++ b/war/version.html
@@ -58,7 +58,7 @@
                 <p>
                   <ul>
                     <li>Tablet datetime selectors for planboard and profile timeline <i class="text-info">11-4-2013</i></li>
-                    <li>Removed footer for mobile and tablets and changed it to portable preloader 10-4-2013 <i class="text-info">10-4-2013</i></li>
+                    <li>Removed footer for mobile and tablets and changed it to portable preloader <i class="text-info">10-4-2013</i></li>
                     <li>Main navigation menu more friendly with apple or android tablets or mobiles <i class="text-info">10-4-2013</i></li>
                     <li>First group to render setting functionality <i class="text-info">10-4-2013</i></li>
                     <li>Default wish value setting for groups <i class="text-info">9-4-2013</i></li>
