--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,7 @@
                 <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Corrected a localization issue with 'no messages' in the box <i class="text-info">11-4-2013</i></li>
                     <li>Tablet datetime selectors for planboard and profile timeline <i class="text-info">11-4-2013</i></li>
                     <li>Removed footer for mobile and tablets and changed it to portable preloader <i class="text-info">10-4-2013</i></li>
                     <li>Main navigation menu more friendly with apple or android tablets or mobiles <i class="text-info">10-4-2013</i></li>
