--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,8 @@
                 <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Meridian time (hour) issue with selecting time range with mouse either by shift or ctrl keys is resolved <i class="text-info">12-4-2013</i></li>
+                    <li>Tablet issues has been solved <i class="text-info">12-4-2013</i></li>
                     <li>Corrected a localization issue with 'no messages' in the box <i class="text-info">11-4-2013</i></li>
                     <li>Tablet datetime selectors for planboard and profile timeline <i class="text-info">11-4-2013</i></li>
                     <li>Removed footer for mobile and tablets and changed it to portable preloader <i class="text-info">10-4-2013</i></li>
