--- a/war/index.html
+++ b/war/index.html
@@ -233,14 +233,14 @@
     <!-- init angular app -->
     <script src="js/app.js"></script>
     <!-- modules -->
-    <script src="js/modules/login.js"></script>
-    <script src="js/modules/dashboard.js"></script>
-    <script src="js/modules/planboard.js"></script>
-    <script src="js/modules/messages.js"></script>
-    <script src="js/modules/groups.js"></script>
-    <script src="js/modules/profile.js"></script>
-    <script src="js/modules/settings.js"></script>
-    <script src="js/modules/help.js"></script>
+    <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/dashboard.js"></script>
+    <script src="js/controllers/planboard.js"></script>
+    <script src="js/controllers/messages.js"></script>
+    <script src="js/controllers/groups.js"></script>
+    <script src="js/controllers/profile.js"></script>
+    <script src="js/controllers/settings.js"></script>
+    <script src="js/controllers/help.js"></script>
     <!-- angular services, directives and filters -->
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
