--- a/war/index.html
+++ b/war/index.html
@@ -232,6 +232,7 @@
     <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
     <!-- init angular app -->
     <script src="js/app.js"></script>
+    <script src="js/modals.js"></script>
     <!-- modules -->
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/dashboard.js"></script>
