--- a/war/index.html
+++ b/war/index.html
@@ -234,14 +234,14 @@
     <script src="js/app.js"></script>
     <script src="js/modals.js"></script>
     <!-- modules -->
-    <script src="js/controllers/login.js"></script>
-    <script src="js/controllers/dashboard.js"></script>
-    <script src="js/controllers/planboard.js"></script>
-    <script src="js/controllers/messages.js"></script>
-    <script src="js/controllers/groups.js"></script>
-    <script src="js/controllers/profile.js"></script>
-    <script src="js/controllers/settings.js"></script>
-    <script src="js/controllers/help.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/dashboard.js"></script>
+    <script src="js/planboard.js"></script>
+    <script src="js/messages.js"></script>
+    <script src="js/groups.js"></script>
+    <script src="js/profile.js"></script>
+    <script src="js/settings.js"></script>
+    <script src="js/help.js"></script>
     <!-- angular services, directives and filters -->
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
