all controllers, modals, directives, filters and app configurations are angular-modularized

--- a/war/index.html
+++ b/war/index.html
@@ -217,7 +217,7 @@
     <script src="js/libs/chosen/chosen.jquery.min.js"></script>
     <script src="js/libs/date/1.0/date.js"></script>
     <!-- angular -->
-    <script src="js/libs/angular/1.0.5/angular.min.js"></script>
+    <script src="js/libs/angular/1.0.5/angular.js"></script>
     <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script> -->
@@ -233,16 +233,7 @@
     <!-- init angular app -->
     <script src="js/app.js"></script>
     <script src="js/modals.js"></script>
-    <!-- modules -->
-    <script src="js/login.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/planboard.js"></script>
-    <script src="js/messages.js"></script>
-    <script src="js/groups.js"></script>
-    <script src="js/profile.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/help.js"></script>
-    <!-- angular services, directives and filters -->
+    <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script>
