--- a/war/index.html
+++ b/war/index.html
@@ -19,14 +19,23 @@
     <script src="js/libs/jquery/jquery-browser.js"></script>
 
     <!-- profile configs -->
-    <script src="profiles/knrmtest/profile.js"></script>
+    <script src="js/profiles/knrmtest/profile.js"></script>
     
     <!-- favicons -->
-    <link rel="shortcut icon" ng-href="profiles/{{config.profile.meta}}/img/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" 
+          ng-href="js/profiles/{{config.profile.meta}}/img/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" 
+          sizes="144x144" 
+          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" 
+          sizes="114x114" 
+          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" 
+          sizes="72x72" 
+          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" 
+          sizes="57x57" 
+          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -47,7 +56,7 @@
     
     <script type="text/javascript">
       $('#watermark').css({
-        backgroundImage: 'url(../profiles/' + profile.meta  + '/img/watermark.png)',
+        backgroundImage: 'url(../js/profiles/' + profile.meta  + '/img/watermark.png)',
         backgroundRepeat: 'no-repeat'
       });
 
@@ -231,6 +240,7 @@
     <!-- third parties - Lose sugar dependencies in daterangepicker plugin and remove this -->
     <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
     <!-- init angular app -->
+    <!-- <script src="js/all.min.js"></script> -->
     <script src="js/app.js"></script>
     <script src="js/modals.js"></script>
     <script src="js/controllers.js"></script>
