--- a/war/index.html
+++ b/war/index.html
@@ -38,9 +38,7 @@
           ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- compability tests and css fixers -->
     <script src="js/libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>
