--- a/war/index.html
+++ b/war/index.html
@@ -224,7 +224,7 @@
     <script src="js/libs/chosen/chosen.jquery.min.js"></script>
     <script src="js/libs/date/1.0/date.js"></script>
     <!-- angular -->
-    <script src="js/libs/angular/1.0.5/angular.js"></script>
+    <script src="js/libs/angular/1.0.5/angular.min.js"></script>
     <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script> -->
@@ -238,13 +238,13 @@
     <!-- third parties - Lose sugar dependencies in daterangepicker plugin and remove this -->
     <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
     <!-- init angular app -->
-    <!-- <script src="js/all.min.js"></script> -->
-    <script src="js/app.js"></script>
+    <script src="js/all.min.js"></script>
+    <!-- <script src="js/app.js"></script>
     <script src="js/modals.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="js/filters.js"></script> -->
     <!-- angular-strap -->
     <!-- Move angularstrap into directives maybe? -->
     <script src="js/libs/angular-strap/0.7.0/angular-strap.min.js"></script>
