--- a/war/index.html
+++ b/war/index.html
@@ -62,8 +62,6 @@
     </script>
     <!-- end watermark for app -->
 
-    <div watermarker="{{config.profile.meta}}"></div>
-
     <!-- navbar -->
     <div class="navbar navbar-fixed-top" bs-navbar>
       <div class="navbar-inner">
@@ -179,9 +177,11 @@
     </div>
     <!-- end wrap -->
 
+    <!-- mobile status bar -->
     <div id="mobile-status-bar" ng-show="loading.status && browser.mobile">
       <img src="img/ajax-loader.gif"><small>{{loading.message}}</small>
     </div>
+    <!-- end mobile status bar -->
 
     <!-- footer -->
     <div id="footer" ng-hide="browser.mobile">
@@ -216,9 +216,7 @@
     </div>
     <!-- end footer -->
 
-    <script src="js/localization.js"></script>
-    <!-- custom jquery and other stuff -->
-    <script src="js/custom.js"></script>
+
     <!--[if gt IE 7]><!-->
     <!-- third parties -->
     <script src="js/libs/chosen/chosen.jquery.min.js"></script>
@@ -237,14 +235,17 @@
     <script src="js/libs/daterangepicker/1.1.0/daterangepicker.js"></script>
     <!-- third parties - Lose sugar dependencies in daterangepicker plugin and remove this -->
     <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
+
     <!-- init angular app -->
     <script src="js/all.min.js"></script>
-    <!-- <script src="js/app.js"></script>
+    <!-- <script src="js/localization.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/modals.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script> -->
+
     <!-- angular-strap -->
     <!-- Move angularstrap into directives maybe? -->
     <script src="js/libs/angular-strap/0.7.0/angular-strap.min.js"></script>
