--- a/war/index.html
+++ b/war/index.html
@@ -240,6 +240,7 @@
     <!-- <script src="js/all.min.js"></script> -->
     <script src="js/localization.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/modals.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
