--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,7 @@
                 <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Major app loading performanace tweaks with reducing requests and minified and compiled to one version of app libraries <i class="text-info">13-4-2013</i></li>
                     <li>Meridian time (hour) issue with selecting time range with mouse either by shift or ctrl keys is resolved <i class="text-info">12-4-2013</i></li>
                     <li>Tablet issues has been solved <i class="text-info">12-4-2013</i></li>
                     <li>Corrected a localization issue with 'no messages' in the box <i class="text-info">11-4-2013</i></li>
