--- a/war/index.html
+++ b/war/index.html
@@ -237,15 +237,17 @@
     <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
 
     <!-- init angular app -->
-    <!-- <script src="js/all.min.js"></script> -->
-    <script src="js/localization.js"></script>
+    <script src="js/all.min.js"></script>
+    <!-- <script src="js/localization.js"></script>
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/modals.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="js/filters.js"></script> -->
 
     <!-- angular-strap -->
     <!-- Move angularstrap into directives maybe? -->
