--- a/war/index.html
+++ b/war/index.html
@@ -16,26 +16,18 @@
     <!-- jquery -->
     <!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
     <script src="js/libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-    <script src="js/libs/jquery/jquery-browser.js"></script>
+    <script src="js/libs/rsvp/1.0.0/rsvp.min.js"></script>
+    <script src="js/plugins.js"></script>
 
     <!-- profile configs -->
     <script src="js/profiles/knrmtest/profile.js"></script>
     
     <!-- favicons -->
-    <link rel="shortcut icon" 
-          ng-href="js/profiles/{{config.profile.meta}}/img/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" 
-          sizes="144x144" 
-          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" 
-          sizes="114x114" 
-          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" 
-          sizes="72x72" 
-          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" 
-          sizes="57x57" 
-          ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" ng-href="js/profiles/{{config.profile.meta}}/img/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -216,30 +208,15 @@
     </div>
     <!-- end footer -->
 
-
     <!--[if gt IE 7]><!-->
-    <!-- third parties -->
-    <script src="js/libs/chosen/chosen.jquery.min.js"></script>
     <script src="js/libs/date/1.0/date.js"></script>
-    <!-- angular -->
     <script src="js/libs/angular/1.0.5/angular.min.js"></script>
     <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script> -->
-    <!-- bootstrap -->
     <script src="js/libs/bootstrap/bootstrap.js"></script>
-    <!-- third parties -->
-    <script src="js/libs/chaps/timeline/2.4.0/timeline.js"></script>
-    <script src="js/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-    <script src="js/libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
-    <script src="js/libs/daterangepicker/1.1.0/daterangepicker.js"></script>
-    <!-- third parties - Lose sugar dependencies in daterangepicker plugin and remove this -->
-    <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
-
     <!-- init angular app -->
-    <script src="js/all.min.js"></script>
+    <script src="js/app.min.js"></script>
     <!-- <script src="js/localization.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/webpaige.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/bootstrap.js"></script>
@@ -248,15 +225,6 @@
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script> -->
-
-    <!-- angular-strap -->
-    <!-- Move angularstrap into directives maybe? -->
-    <script src="js/libs/angular-strap/0.7.0/angular-strap.min.js"></script>
-    <!-- raphael -->
-    <script src="js/libs/raphael/2.1.0/raphael-min.js"></script>
-    <!-- g-raphael -->
-    <script src="js/libs/g-raphael/0.5.1/g.raphael-min.js"></script>
-    <script src="js/libs/g-raphael/0.5.1/g.pie-min.js"></script>
     <!--<![endif]-->
 
   </body>
