--- a/war/index.html
+++ b/war/index.html
@@ -29,6 +29,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
+    <!-- <shortcuts key="1" value="2"></shortcuts> -->
+
     <!-- styles -->
     <link rel="stylesheet" href="css/styles.css">
     
@@ -223,6 +225,7 @@
     <script src="js/modals.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/libs/angular-strap/0.7.2/angular-strap.js"></script>
     <script src="js/services.js"></script>
     <script src="js/filters.js"></script> -->
     <!--<![endif]-->
