compressed third party libraries

--- a/war/index.html
+++ b/war/index.html
@@ -29,8 +29,6 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
-    <!-- <shortcuts key="1" value="2"></shortcuts> -->
-
     <!-- styles -->
     <link rel="stylesheet" href="css/styles.css">
     
@@ -42,6 +40,8 @@
     
   </head>
   <body>
+
+    <sign-in />
 
     <!-- watermark for app -->
     <div id="watermark"></div>
@@ -216,8 +216,8 @@
     <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script>
     <script src="js/libs/bootstrap/bootstrap.js"></script>
     <!-- init angular app -->
-    <script src="js/app.min.js"></script>
-    <!-- <script src="js/localization.js"></script>
+    <!-- <script src="js/app.min.js"></script> -->
+    <script src="js/localization.js"></script>
     <script src="js/webpaige.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
@@ -227,7 +227,7 @@
     <script src="js/directives.js"></script>
     <script src="js/libs/angular-strap/0.7.2/angular-strap.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/filters.js"></script> -->
+    <script src="js/filters.js"></script>
     <!--<![endif]-->
 
   </body>
