--- a/war/version.html
+++ b/war/version.html
@@ -25,9 +25,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <!-- compability tests and css fixers -->
     <script src="js/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
