completion of minifying third-parties

--- a/war/index.html
+++ b/war/index.html
@@ -211,10 +211,11 @@
     <!-- end footer -->
 
     <!--[if gt IE 7]><!-->
-    <script src="js/libs/date/1.0/date.js"></script>
+    <script src="js/libs/date/1.0/date.min.js"></script>
     <script src="js/libs/angular/1.0.5/angular.min.js"></script>
     <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script>
-    <script src="js/libs/bootstrap/bootstrap.js"></script>
+    <script src="js/libs/bootstrap/bootstrap.min.js"></script>
+    
     <!-- init angular app -->
     <!-- <script src="js/app.min.js"></script> -->
     <script src="js/localization.js"></script>
