--- a/war/version.html
+++ b/war/version.html
@@ -55,6 +55,7 @@
                 <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Full screen ability for webkit browsers <i class="text-info">15-4-2013</i></li>
                     <li>Compressed third party libraries (performance tweak) <i class="text-info">15-4-2013</i></li>
                     <li>AMD support added for loading third-party-libraries (performance tweak) <i class="text-info">15-4-2013</i></li>
                     <li>Major app loading performanace tweaks with reducing requests and minified and compiled to one version of app libraries <i class="text-info">13-4-2013</i></li>
