--- a/war/version.html
+++ b/war/version.html
@@ -55,6 +55,7 @@
                 <h4>2.0.2 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Background syncing for every minute and displaying webkit desktop notification for new messages <i class="text-info">16-4-2013</i></li>
                     <li>By adding a new slot, slot form now opens with time of now and 1 hour later <i class="text-info">15-4-2013</i></li>
                     <li>Full screen ability for webkit browsers <i class="text-info">15-4-2013</i></li>
                     <li>Compressed third party libraries (performance tweak) <i class="text-info">15-4-2013</i></li>
