--- a/war/index.html
+++ b/war/index.html
@@ -224,17 +224,47 @@
 
     <!-- init angular app -->
     <!-- <script src="js/app.min.js"></script> -->
+
     <script src="js/localization.js"></script>
     <script src="js/webpaige.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/modals.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/directives.js"></script>
+
+    <script src="js/modals/user.js"></script>
+    <script src="js/modals/dashboard.js"></script>
+    <script src="js/modals/slots.js"></script>
+    <script src="js/modals/messages.js"></script>
+    <script src="js/modals/groups.js"></script>
+    <script src="js/modals/profile.js"></script>
+    <script src="js/modals/settings.js"></script>
+
+    <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/logout.js"></script>
+    <script src="js/controllers/dashboard.js"></script>
+    <script src="js/controllers/planboard.js"></script>
+    <script src="js/controllers/messages.js"></script>
+    <script src="js/controllers/groups.js"></script>
+    <script src="js/controllers/profile.js"></script>
+    <script src="js/controllers/settings.js"></script>
+    <script src="js/controllers/help.js"></script>
+
+    <script src="js/directives/directives.js"></script>
     <script src="js/libs/angular-strap/0.7.0/angular-strap.min.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/filters.js"></script>
+
+    <script src="js/services/timer.js"></script>
+    <script src="js/services/session.js"></script>
+    <script src="js/services/dater.js"></script>
+    <script src="js/services/eventbus.js"></script>
+    <script src="js/services/interceptor.js"></script>
+    <script src="js/services/md5.js"></script>
+    <script src="js/services/storage.js"></script>
+    <script src="js/services/strings.js"></script>
+    <script src="js/services/announcer.js"></script>
+    <script src="js/services/sloter.js"></script>
+    <script src="js/services/stats.js"></script>
+
+    <script src="js/filters/filters.js"></script>
     <!--<![endif]-->
 
 
