--- a/war/index.html
+++ b/war/index.html
@@ -16,10 +16,10 @@
     <!-- jquery -->
     <script src="js/libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script src="js/libs/rsvp/1.0.0/rsvp.min.js"></script>
-    <script src="js/plugins.min.js"></script>
+    <script src="js/plugins/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="js/profiles/knrmtest/profile.js"></script>
+    <script src="js/profiles/knrm/profile.js"></script>
     
     <!-- favicons -->
     <link rel="shortcut icon" ng-href="js/profiles/{{config.profile.meta}}/img/ico/favicon.ico">
@@ -223,9 +223,9 @@
     <script src="js/libs/bootstrap/bootstrap.min.js"></script>
 
     <!-- init angular app -->
-    <!-- <script src="js/app.min.js"></script> -->
+    <script src="js/app.min.js"></script>
 
-    <script src="js/localization.js"></script>
+    <!-- <script src="js/localization.js"></script>
     <script src="js/webpaige.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
@@ -264,7 +264,7 @@
     <script src="js/services/sloter.js"></script>
     <script src="js/services/stats.js"></script>
 
-    <script src="js/filters/filters.js"></script>
+    <script src="js/filters/filters.js"></script> -->
     <!--<![endif]-->
 
 
