--- a/war/version.html
+++ b/war/version.html
@@ -40,7 +40,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.0.1</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.0.2</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -52,11 +52,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
-                <h4>2.0.2 (snapshot)</h4>
+                <h4>2.0.2</h4>
                 <p>
                   <ul>
+                    <li>KNRM (live) <i class="text-info">17-4-2013</i></li>
                     <li>Core modules seperated <i class="text-info">17-4-2013</i></li>
-                    <li>Background syncing for every minute and displaying webkit desktop notification for new messages <i class="text-info">16-4-2013</i></li>
+                    <li>Background syncing for every minute and displaying webkit desktop notification for new messages <span class="text-warning">(still in development, temporarily disabled)</span> <i class="text-info">16-4-2013</i></li>
                     <li>By adding a new slot, slot form now opens with time of now and 1 hour later <i class="text-info">15-4-2013</i></li>
                     <li>Full screen ability for webkit browsers <i class="text-info">15-4-2013</i></li>
                     <li>Compressed third party libraries (performance tweak) <i class="text-info">15-4-2013</i></li>
