first stage in timeline cores

--- a/war/index.html
+++ b/war/index.html
@@ -223,9 +223,9 @@
     <script src="js/libs/bootstrap/bootstrap.min.js"></script>
 
     <!-- init angular app -->
-    <script src="js/app.min.js"></script>
+    <!-- <script src="js/app.min.js"></script> -->
 
-    <!-- <script src="js/localization.js"></script>
+    <script src="js/localization.js"></script>
     <script src="js/webpaige.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
@@ -243,6 +243,8 @@
     <script src="js/controllers/logout.js"></script>
     <script src="js/controllers/dashboard.js"></script>
     <script src="js/controllers/planboard.js"></script>
+    <script src="js/controllers/timeline.js"></script>
+    <script src="js/controllers/timeline-navigation.js"></script>
     <script src="js/controllers/messages.js"></script>
     <script src="js/controllers/groups.js"></script>
     <script src="js/controllers/profile.js"></script>
@@ -264,7 +266,7 @@
     <script src="js/services/sloter.js"></script>
     <script src="js/services/stats.js"></script>
 
-    <script src="js/filters/filters.js"></script> -->
+    <script src="js/filters/filters.js"></script>
     <!--<![endif]-->
 
 
