pre-test deployment

--- a/war/version.html
+++ b/war/version.html
@@ -40,7 +40,7 @@
         <section id="versions">
           <div class="container-narrow">
             <div class="masthead">
-              <h4 class="pull-right"><span class="muted">Current version:</span> v2.0.2</h4>
+              <h4 class="pull-right"><span class="muted">Current version:</span> v2.1.0 (snapshot)</h4>
               <h3 class="muted">Change Log</h3>
             </div>
             <hr>
@@ -52,6 +52,12 @@
             <hr>
             <div class="row-fluid marketing">
               <div class="span12">
+                <h4>2.1.0 (snapshot)</h4>
+                <p>
+                  <ul>
+                    <li>Hotfix for not displaying correct weeks by previous/future weeks in profile timeline <i class="text-info">19-4-2013</i></li>
+                  </ul>
+                </p>
                 <h4>2.0.2</h4>
                 <p>
                   <ul>
