--- a/war/index.html
+++ b/war/index.html
@@ -223,9 +223,9 @@
     <script src="js/libs/bootstrap/bootstrap.min.js"></script>
 
     <!-- init angular app -->
-    <!-- <script src="js/app.min.js"></script> -->
+    <script src="js/app.min.js"></script>
 
-    <script src="js/localization.js"></script>
+    <!-- <script src="js/localization.js"></script>
     <script src="js/webpaige.js"></script>
     <script src="js/config.js"></script>
     <script src="js/routes.js"></script>
@@ -266,7 +266,7 @@
     <script src="js/services/sloter.js"></script>
     <script src="js/services/stats.js"></script>
 
-    <script src="js/filters/filters.js"></script>
+    <script src="js/filters/filters.js"></script> -->
     <!--<![endif]-->
 
 
