main app files jslint-ed

--- a/war/index.html
+++ b/war/index.html
@@ -223,7 +223,7 @@
     <script src="js/libs/bootstrap/bootstrap.min.js"></script>
 
     <!-- init angular app -->
-    <script src="js/app.min.js"></script>
+    <script src="js/dist/app.min.js"></script>
 
     <!-- <script src="js/localization.js"></script>
     <script src="js/webpaige.js"></script>
