--- a/war/version.html
+++ b/war/version.html
@@ -55,6 +55,7 @@
                 <h4>2.1.0 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Language corrections in planboard statistics <i class="text-info">19-4-2013</i></li>
                     <li>Hotfix for not displaying correct weeks by previous/future weeks in profile timeline <i class="text-info">19-4-2013</i></li>
                   </ul>
                 </p>
