--- a/war/index.html
+++ b/war/index.html
@@ -19,14 +19,14 @@
     <script src="dist/plugins.min.js"></script>
 
     <!-- profile configs -->
-    <script src="js/profiles/knrmtest/profile.js"></script>
+    <script src="profiles/test/profile.js"></script>
     
     <!-- favicons -->
-    <link rel="shortcut icon" ng-href="js/profiles/{{config.profile.meta}}/img/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144"  ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114"  ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72"    ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57"    ng-href="js/profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" ng-href="profiles/{{config.profile.meta}}/img/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144"  ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114"  ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72"    ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57"    ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -45,7 +45,7 @@
     
     <script type="text/javascript">
       $('#watermark').css({
-        backgroundImage: 'url(../js/profiles/' + profile.meta  + '/img/watermark.png)',
+        backgroundImage: 'url(../profiles/' + profile.meta  + '/img/watermark.png)',
         backgroundRepeat: 'no-repeat'
       });
 
