--- a/war/index.html
+++ b/war/index.html
@@ -29,7 +29,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57"    ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="dist/styles.css">
     
     <!-- compability tests and css fixers -->
     <script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>
