style files seperated for SASS development & dashboard shortage togglers hidden temporarily

--- a/war/index.html
+++ b/war/index.html
@@ -29,7 +29,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57"    ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
-    <link rel="stylesheet" href="dist/styles.css">
+    <link rel="stylesheet" href="dist/bootstrap.css">
+    <link rel="stylesheet" href="dist/responsive.css">
+    <link rel="stylesheet" href="dist/app.css">
     
     <!-- compability tests and css fixers -->
     <script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>
@@ -221,8 +223,8 @@
     <script src="libs/angular/1.0.5/angular.min.js"></script>
     <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
-    <!-- <script src="dist/app.min.js"></script> -->
-    <script src="src/app.js"></script>
+    <script src="dist/app.min.js"></script>
+    <!-- <script src="src/app.js"></script> -->
     <!--<![endif]-->
 
   </body>
