--- a/war/index.html
+++ b/war/index.html
@@ -227,5 +227,7 @@
     <!-- <script src="src/app.js"></script> -->
     <!--<![endif]-->
 
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
   </body>
 </html>
