--- a/war/index.html
+++ b/war/index.html
@@ -56,7 +56,7 @@
     <!-- end watermark for app -->
 
     <!-- navbar -->
-    <div class="navbar navbar-fixed-top" bs-navbar>
+    <div class="navbar navbar-inverse navbar-fixed-top" bs-navbar>
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
