some sass modifications

--- a/war/tests/static/buttons.html
+++ b/war/tests/static/buttons.html
@@ -115,6 +115,28 @@
         </div><!-- /btn-group -->
       </div><!-- /btn-toolbar -->
 
+      <hr>
+
+      <h2>Additional colors</h2>
+      <p>Progress bars use some of the same button and alert classes for consistent styles.</p>
+      <div class="bs-docs-example">
+        <div class="progress progress-striped" style="margin-bottom: 9px;">
+          <div class="bar" style="width: 20%"></div>
+        </div>
+        <div class="progress progress-striped progress-info" style="margin-bottom: 9px;">
+          <div class="bar" style="width: 20%"></div>
+        </div>
+        <div class="progress progress-striped progress-success" style="margin-bottom: 9px;">
+          <div class="bar" style="width: 40%"></div>
+        </div>
+        <div class="progress progress-striped progress-warning" style="margin-bottom: 9px;">
+          <div class="bar" style="width: 60%"></div>
+        </div>
+        <div class="progress progress-striped progress-danger">
+          <div class="bar" style="width: 80%"></div>
+        </div>
+      </div>
+
 
     </div> <!-- /container -->
 
