--- a/war/index.html
+++ b/war/index.html
@@ -32,6 +32,10 @@
     <link rel="stylesheet" href="dist/bootstrap.css">
     <link rel="stylesheet" href="dist/responsive.css">
     <link rel="stylesheet" href="dist/app.css">
+
+    <!--[if IE 8]>
+    <link rel="stylesheet" href="css/ie8.css">
+    <![endif]-->
     
     <!-- compability tests and css fixers -->
     <script src="libs/modernizr/2.6.2/modernizr-2.6.2.min.js"></script>
@@ -223,8 +227,8 @@
     <script src="libs/angular/1.0.5/angular.min.js"></script>
     <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
     <script src="libs/bootstrap/bootstrap.min.js"></script>
-    <script src="dist/app.min.js"></script>
-    <!-- <script src="src/app.js"></script> -->
+    <!-- <script src="dist/app.min.js"></script> -->
+    <script src="src/app.js"></script>
     <!--<![endif]-->
 
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
