--- a/war/browsers.html
+++ b/war/browsers.html
@@ -19,14 +19,16 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="img/ico/apple-touch-icon-57-precomposed.png">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="dist/bootstrap.css">
+    <link rel="stylesheet" href="dist/responsive.css">
+    <link rel="stylesheet" href="dist/app.css">
     
   </head>
   <body>
 
     <!-- ie6 & ie7 -->
     <div id="welcome">
-      <span class="entypo" style="font-size: 240px">&#128712;</span>
+      <span class="entypo" style="font-size: 160px">&#128712;</span>
       <br><br><br><br>
       <h2>Helaas!</h2>
       <h4>Deze browser wordt niet ondersteund. Waarom niet?</h4>
