--- a/war/version.html
+++ b/war/version.html
@@ -55,6 +55,8 @@
                 <h4>2.1.0 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Fixed not displaying alarm messages in dashboard <i class="text-info">26-4-2013</i></li>
+                    <li>Fixed centering styling issue for login button in login screen for IE8 <i class="text-info">26-4-2013</i></li>
                     <li>Language corrections in planboard statistics <i class="text-info">19-4-2013</i></li>
                     <li>Hotfix for not displaying correct weeks by previous/future weeks in profile timeline <i class="text-info">19-4-2013</i></li>
                   </ul>
