--- a/war/version.html
+++ b/war/version.html
@@ -25,7 +25,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="dist/bootstrap.css">
+    <link rel="stylesheet" href="dist/responsive.css">
+    <link rel="stylesheet" href="dist/app.css">
     
     <!-- compability tests and css fixers -->
     <script src="js/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
