--- a/war/index.html
+++ b/war/index.html
@@ -237,9 +237,14 @@
     <script src="src/app.js"></script>
     <!--<![endif]-->
 
-    <!--
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-    -->
+    
+    <script>
+      if (location.host.split(':')[0] == 'localhost')
+      {
+        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>');
+      }
+    </script>
+    
 
   </body>
 </html>
