--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,7 @@
                 <h4>2.1.0 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Pagination in messages center <i class="text-info">2-5-2013</i></li>
                     <li>Instruct user with email adres placeholder when remembering account info at login <i class="text-info">29-4-2013</i></li>
                     <li>Conflict error message by registering same username <i class="text-info">29-4-2013</i></li>
                     <li>Fixed not displaying alarm messages in dashboard <i class="text-info">26-4-2013</i></li>
