--- a/war/index.html
+++ b/war/index.html
@@ -33,6 +33,10 @@
     <!-- profile configs -->
     <script src="profiles/test/profile.js"></script>
 
+    <!--[if IE]>
+      <link rel="stylesheet" href="css/ie.css">
+    <![endif]-->
+
     <!--[if IE 8]>
       <link rel="stylesheet" href="css/ie8.css">
     <![endif]-->
