ie8 blocked temporarily

--- a/war/browsers.html
+++ b/war/browsers.html
@@ -28,12 +28,12 @@
 
     <!-- ie6 & ie7 -->
     <div id="welcome">
-      <span class="entypo" style="font-size: 160px">&#128712;</span>
-      <br><br><br><br>
+      <!-- <span class="entypo" style="font-size: 160px">&#128712;</span> -->
+      <br><br><!-- <br><br> -->
       <h2>Helaas!</h2>
       <h4>Deze browser wordt niet ondersteund. Waarom niet?</h4>
       <p>Deze webapplicatie is gebaseerd op de nieuwste technologie. Daardoor werkt deze applicatie nog niet optimaal in oudere browsers.</p><br>
-      <p><a href="http://www.browsehappy.com/" class="btn btn-success btn-large">Installeer Een Betere Browser</a></p>
+      <p><a href="http://www.browsehappy.com/" class="btn btn-success btn-large">Installeer een nieuwere browser</a></p>
     </div>
 
   </body>
