--- a/war/browsers.html
+++ b/war/browsers.html
@@ -36,5 +36,19 @@
       <p><a href="http://www.browsehappy.com/" class="btn btn-success btn-large">Installeer een nieuwere browser</a></p>
     </div>
 
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-36532309-1']);
+      _gaq.push(['_setDomainName', 'ask-cs.com']);
+      _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_trackPageview']);
+    
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+
   </body>
 </html>
