--- a/war/index.html
+++ b/war/index.html
@@ -264,6 +264,19 @@
     <script src="src/app.js"></script>
     <!--<![endif]-->
 
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-36532309-1']);
+      _gaq.push(['_setDomainName', 'ask-cs.com']);
+      _gaq.push(['_setAllowLinker', true]);
+      _gaq.push(['_trackPageview']);
+    
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
     
     <script>
       if (location.host.split(':')[0] == 'localhost')
