removed client names from version logs

--- a/war/version.html
+++ b/war/version.html
@@ -58,7 +58,7 @@
                 <p>
                   <ul>
                     <li>Hotfix for not going further than 6th page in pagination in messages <i class="text-info">4-5-2013</i></li>
-                    <li>Deployed for live, test, gvrb and isparaat <i class="text-info">3-5-2013</i></li>
+                    <li>Deployed for 100, 110, 120 and 130 <i class="text-info">3-5-2013</i></li>
                   </ul>
                 </p>
                 <h4>2.1.0</h4>
@@ -78,7 +78,7 @@
                 <h4>2.0.2</h4>
                 <p>
                   <ul>
-                    <li>KNRM (live) <i class="text-info">17-4-2013</i></li>
+                    <li>Deployed for 110 <i class="text-info">17-4-2013</i></li>
                     <li>Core modules seperated <i class="text-info">17-4-2013</i></li>
                     <li>Background syncing for every minute and displaying webkit desktop notification for new messages <span class="text-warning">(still in development, temporarily disabled)</span> <i class="text-info">16-4-2013</i></li>
                     <li>By adding a new slot, slot form now opens with time of now and 1 hour later <i class="text-info">15-4-2013</i></li>
@@ -111,9 +111,7 @@
                 <h4>2.0.0</h4>
                 <p>
                   <ul>
-                    <li>KNRM (live) <i class="text-info">3-4-2013</i></li>
-                    <li>Reddingsbrigade (test) <i class="text-info">3-4-2013</i></li>
-                    <li>Brandweer (demo) <i class="text-info">3-4-2013</i></li>
+                    <li>Deplyoyed for 100, 110, 120, 130 <i class="text-info">3-4-2013</i></li>
                   </ul>
                 </p>
               </div>
