--- a/war/version.html
+++ b/war/version.html
@@ -57,6 +57,9 @@
                 <h4>2.2.0 (snapshot)</h4>
                 <p>
                   <ul>
+                    <li>Background planboard sync <i class="text-info">13-5-2013</i></li>
+                    <li>Message job scheduler <i class="text-info">13-5-2013</i></li>
+                    <li>IE 8/9/10 planboard stabilization <i class="text-info">13-5-2013</i></li>
                     <li>Hotfix for not going further than 6th page in pagination in messages <i class="text-info">4-5-2013</i></li>
                     <li>Deployed for 100, 110, 120 and 130 <i class="text-info">3-5-2013</i></li>
                   </ul>
