hotfix for not displaying profile information in profile editing form

--- a/war/index.html
+++ b/war/index.html
@@ -189,7 +189,7 @@
       </div>
       <div ng-show="loaderIcons.profile">
         <span class="entypo">&#128100;</span>
-        <p>{{ui.loading.general}}<br>{{ui.loading.profile}}e</p>
+        <p>{{ui.loading.general}}<br>{{ui.loading.profile}}</p>
       </div>
       <div ng-show="loaderIcons.settings">
         <span class="entypo">&#9874;</span>
